[package]
name = "bambino-fw"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]

# [[bin]]
# name = "pum_calibration"
# path = "src/bin/pum_calibration.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Change stm32f091rc to your chip name, if necessary.
embassy-stm32 = { version = "0.1.0", features = [ "defmt", "memory-x", "stm32f070cb", "time-driver-tim15", "exti", "unstable-pac"] }
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = "0.3"
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
static_cell = "2"
portable-atomic = { version = "1.5", features = ["unsafe-assume-single-core"] }
embedded-hal-async = { version = "1.0" }
embassy-futures = { version = "0.1.1" }
futures = { version = "0.3.30", default_features = false}

[profile.release]
debug = 2
